--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,40 @@
 alembic==1.13.1
+attrs==23.2.0 
 blinker==1.7.0
 certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-distlib==0.3.8
-filelock==3.13.1
+exceptiongroup==1.2.0
 Flask==3.0.2
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
+h11==0.14.0
+idna==3.6
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 Mako==1.3.2
 MarkupSafe==2.1.5
-pipenv==2023.12.1
-platformdirs==4.2.0
-setuptools==69.0.3
+outcome==1.3.0.post0
+packaging==23.2
+pluggy==1.4.0
+pycparser==2.21
+PySocks==1.7.1
+pytest==8.0.1
+python-dotenv==1.0.1
+requests==2.31.0
+selenium==4.18.1
+sniffio==1.3.1
+sortedcontainers==2.4.0
 SQLAlchemy==2.0.25
+tomli==2.0.1
+trio==0.24.0
+trio-websocket==0.11.1
 typing_extensions==4.9.0
-virtualenv==20.25.0
+urllib3==2.2.1
+webdriver-manager==4.0.1
 Werkzeug==3.0.1
+wsproto==1.2.0
